--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en-US"
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Sahem Priego | WDD 130</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Sahem Priego | WDD 130</h1>
-            <img src="image/profile.jpg" alt="Hello my name is Sahem Priego" width="200">
-            <p>Hello my name is Sahem Priego I am from Provo, Utah I enjoy 
-            spending time with family and playing sports. I recently started school in 
+<html lang="en-US" <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Sahem Priego | WDD 130</title>
+<link rel="stylesheet" href="styles/styles.css"
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Sahem Priego | WDD 130</h1>
+        <img src="image/profile.jpg" alt="Hello my name is Sahem Priego" width="200">
+        <p>Hello my name is Sahem Priego I am from Provo, Utah I enjoy
+            spending time with family and playing sports. I recently started school in
             BYU Pathways.</p>
-        </main>
-        <footer>
-            <p>©2025 🌴 Sahem Priego 🌴 Provo, Utah</p>
-        </footer>
-    </body>
+    </main>
+    <footer>
+        <p>©2025 🌴 Sahem Priego 🌴 Provo, Utah</p>
+    </footer>
+</body>
+
 </html>
