--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -28,7 +28,7 @@
             </section>
         </main>
         <aside>
-            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/temples/photo-galleries/payson-utah/800x500/payson-utah-temple-celestial-room-1458545.jpg" alt="payson utah temple celestial room" width="200"
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800x500/payson-utah-temple-celestial-room-1458545.jpg" alt="Payson Utah Temple Celestial Room" width="200"
         </aside>
         <footer>
             🌴 Sahem Priego
