--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Sahem Priego | WDD 130</title>
+<meta name="description" content="Sahem Priego WDD 130 introducing myself">
+<meta name="author" content="Sahem Priego">
 <link rel="stylesheet" href="styles/styles.css"
 </head>
 
@@ -20,6 +22,11 @@
             spending time with family and playing sports. I recently started school in
             BYU Pathways.</p>
     </main>
+    <aside>
+        <h2>Utah</h2>
+        <img src="image/utah.jpg" alt="utah landscape">
+        <p>Utah is in the west side of the united states. It is north of Arizona. It has lots of mountains, perfect place to go hiking.</p>
+    </aside>
     <footer>
         <p>©2025 🌴 Sahem Priego 🌴 Provo, Utah</p>
     </footer>
