--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title>Sahem Priego | WDD 130</title>
 <meta name="description" content="Sahem Priego WDD 130 introducing myself">
 <meta name="author" content="Sahem Priego">
-<link rel="stylesheet" href="styles/styles.css"
-</head>
+<link rel="stylesheet" href="styles/styles.css" </head>
 
 <body>
     <header>
@@ -25,7 +24,8 @@
     <aside>
         <h2>Utah</h2>
         <img src="image/utah.jpg" alt="utah landscape">
-        <p>Utah is in the west side of the united states. It is north of Arizona. It has lots of mountains, perfect place to go hiking.</p>
+        <p>Utah is in the west side of the united states. It is north of Arizona. It has lots of mountains, perfect
+            place to go hiking.</p>
     </aside>
     <footer>
         <p>©2025 🌴 Sahem Priego 🌴 Provo, Utah</p>
