--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com.">linkedin.com</a>
+            <a href=" https://facebook.com.">facebook.com</a>
         </nav>
     </header>
     <main>
@@ -21,8 +23,13 @@
         <p>Hello my name is Sahem Priego I am from Provo, Utah I enjoy
             spending time with family and playing sports. I recently started school in
             BYU Pathways.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=eng" target="_blank">San Diego California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/hermosillo-sonora-mexico-temple?lang=eng" target="_blank">Hermosillo Sonora Mexico Temple</a></li>
+            </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Utah</h2>
         <img src="image/utah.jpg" alt="utah landscape">
         <p>Utah is in the west side of the united states. It is north of Arizona. It has lots of mountains, perfect
