--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,10 +43,10 @@
                 <img src="images/facebook.svg" alt="facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" atl="twitter"
+                <img src="images/twitter.svg" atl="twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="instagram"
+                <img src="images/instagram.svg" alt="instagram">
             </a>
            </nav>
         </footer>
