--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <header>
-        <img src="images/z-rapids-trees.jpg" alt="Rafting Company Logo>
+        <img src="images/z-rapids-trees.jpg" alt="Rafting Company Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
-        "</header>
+        </header>
         <main>
             <div>
-                <img src="images/rafting10_1024.jpg" alt="...">
                 <h1>White Water Rafting</h1>
                 <article>
                     <img src="images/rafting16_1024.jpg" alt="...">
@@ -30,13 +29,18 @@
             </section>
             <section>
                 <h2>Adventure Awaits You</h2>
-                <img src="images/rafting42_600.jpg" alt="...">
-                <img src="images/rafting49_600.jpg" alt="...">
-                <img src="images/rafting56_600.jpg" alt="...">
-                <img src="images/rafting59_600.jpg" alt="...">
-            </section>
+                <div>
+                    <img src="images/rafting10_1024.jpg" alt="...">
+                    <img src="images/rafting42_600.jpg" alt="...">
+                    <img src="images/rafting49_600.jpg" alt="...">
+                    <img src="images/rafting56_600.jpg" alt="...">
+                    <img src="images/rafting59_600.jpg" alt="...">
+                </div>
+            </section>    
         </main>
-        <footer>
+</body>
+ <footer>
+    <section>
            <p>©️ 2025 Sahem Priego</p> 
            <nav class="Socialmedia">
             <a href="Https://facebook.com">
@@ -50,5 +54,5 @@
             </a>
            </nav>
         </footer>
-</body>
+    </section>    
 </html>
